Enhance QR code functionality and server response
- Added support for internal QR code generation in main.cpp
- Updated generateTransactionQRCode function to handle both file and data URL types in qr-utils.js
- Implemented a basic server response in main.js
- Included additional library dependencies in platformio.ini

--- a/ESP32_QRPay_hardware/platformio.ini
+++ b/ESP32_QRPay_hardware/platformio.ini
@@ -14,5 +14,7 @@ board = nodemcu-32s
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
+build_flags.partition_table = min_spiffs.csv
 lib_deps = 
 	adafruit/Adafruit SSD1306@^2.5.10
+	ricmoo/QRCode@^0.0.1
